@@ -1,3 +1,9 @@
+2007-03-21  Frederic Crozat  <fcrozat@mandriva.com>
+
+	* gnome-theme-details.c: (update_color_scheme_tab):
+	Disable revert button when using theme engine defaults colors.
+	Close bug #417423.
+
 2007-03-04  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* gnome-theme-details.c: (update_color_scheme_tab):
